@@ -5,6 +5,7 @@
  *
  */
 
+#include "config.h"
 #include <string.h>
 #include "xmemrchr.h"
 
